--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  sqflite: ^2.2.8+4
+  flutter_libs: ^0.5.15
+  sqflite: ^2.0.2+1
+  sqflite_common_ffi: ^2.2.5
+  sqlite3: ^1.11.1
   uuid: ^3.0.7
+  path: ^1.8.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
@@ -48,7 +53,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  sqflite_common_ffi: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
