--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_libs: ^0.5.15
-  sqflite: ^2.0.2+1
+  sqlite3_flutter_libs: ^0.5.15
+  sqflite: ^2.2.8+3
   sqflite_common_ffi: ^2.2.5
   sqlite3: ^1.11.1
   uuid: ^3.0.7
